<resources>
    <string name="app_name">ASI Midi Magic</string>

    <string name="title_setting_activity">Settings</string>
    <string name="title_scan_activity">Bluetooth scan</string>
    <string name="title_delay_activity">Delay notes</string>
    <string name="title_scale_activity">Scale analysis</string>
    <string name="title_sequence_activity">Sequence analysis</string>
    <string name="title_remap_activity">Velocity remap</string>
    <string name="title_command_activity">MIDI Commands</string>
    <string name="title_analyser_activity">Analyser Commands</string>

    <string name="action_settings">Settings</string>
    <string name="action_bluetooth">Bluetooth</string>

    <string name="button_start">Start</string>
    <string name="button_disconnect">Disconnect</string>

    <string name="button_notes_off">All Notes Off</string>
    <string name="button_local_control">Local Control</string>
    <string name="radio_multi_off">Multi Timbre Off</string>
    <string name="radio_multi_on1">Multi Timbre On1</string>
    <string name="radio_multi_on2">Multi Timbre On2</string>

    <string name="radio_red">Stopped</string>
    <string name="radio_amber">Paused</string>
    <string name="radio_green">Running</string>

    <string name="switch_sticky">Sticky</string>

    <string name="why_btle_location">
        Location permission is needed to scan for nearby Bluetooth devices.
    </string>
    <string name="error_bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="error_bluetooth_advertising_not_supported">BLE Advertising not supported</string>

    <string name="status_no_le_adv">LE Advertising is not available. Please pair with a device to be
        discoverable.
    </string>

    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="no_midi_device">No MIDI device</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="chart_waiting_left">Waiting for left scale</string>
    <string name="chart_waiting_right">Waiting for right scale</string>

    <string name="delay_on">ON delay is %dms</string>
    <string name="delay_off">OFF delay is %dms</string>

    <string name="missing_ports">Missing MIDI ports</string>
    <string name="missing_port">Missing MIDI port</string>

    <string name="scale_notes">%s scale = %d notes</string>

    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="polyrhythm_scale">%s: %s (%d) in %d</string>

    <string name="clear">Clear</string>

    <string name="add_beat">Add beats</string>
    <string name="add_point">Add point</string>
    <string name="process">Process</string>

    <string name="invalid_beat">Invalid beat parameters</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="label_advertisingStatus">Advertising Status</string>
    <string name="status_advertising">Advertising (Keep Screen On)</string>
    <string name="status_notAdvertising">Not Advertising</string>
    <string name="status_advDataTooLarge">Not Advertising. Advertisement is larger than 31 bytes.</string>
    <string name="status_advFeatureUnsupported">Not Advertising. Advertising not supported.</string>
    <string name="status_advInternalError">Not Advertising. Internal error occurred.</string>
    <string name="status_advTooManyAdvertisers">Not Advertising. No advertising instance is available.</string>

    <string name="label_connectionStatus">Connection Status</string>
    <string name="status_devicesConnected">Devices Connected:</string>
    <string name="status_errorWhenConnecting">An error occurred when connecting to a device. Error Code</string>

    <string name="pref_title_auto_local_control">Auto local control</string>
    <string name="pref_description_auto_local_control">Switch on/off local control automatically
    </string>

    <string name="pref_title_list_piano">Digital piano</string>
    <string-array name="pref_list_piano_titles">
        <item>Other</item>
        <item>CA78</item>
        <item>CA98</item>
        <item>KDP90</item>
    </string-array>

    <string-array name="pref_list_piano_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_midi_channels">MIDI Channels</string>
    <string-array name="pref_list_midi_channel_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string-array name="pref_list_midi_channel_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string-array name="beat_colors">
        <item>blue</item>
        <item>red</item>
        <item>black</item>
        <item>green</item>
    </string-array>

</resources>
