<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="auto_local_control"
        android:summary="@string/pref_description_auto_local_control"
        android:title="@string/pref_title_auto_local_control" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_piano_titles"
        android:entryValues="@array/pref_list_piano_values"
        android:key="list_piano"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_piano" />

</androidx.preference.PreferenceScreen>
